# quant-gru-pytorch

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build-linux-cuda.yml  cmake-linux-cuda.yml  docker-ci-image.yml  python-publish.yml
docker/: Dockerfile  README.md  docker-compose.yml
docs/: GRU_Digital_Quantization_QuadraticLUT.md  GRU量化计算流程.md  Process_GRU_Quant.md  processAnalysis.md  分段线性量化原理详解.md
docs/gru_formula/: gru_formula.md
example/: gru.cc  gru_tmp.cc
include/: GRUQuantWrapper.hpp  blas.h  calibration_gpu.cuh  calibration_utils.h  checkData.hpp  check_data.h  cuda_compat.h  devVector.h  dev_vector.h  device_ptr.h  gru.h  gru_interface.h  gru_interface.hpp  gru_quant.h  gru_quant_cpu.h  gru_quantization_ranges.h  gru_quantization_ranges.hpp  histogram_calibration_utils.h  histogram_collector.h  histogram_gpu.cuh  inline_ops.h  parallelAlgorithm.h  parallel_algorithm.h  pot_sqnr_calibrator.h  pot_sqnr_calibrator.hpp  quantize_bitwidth_config.h  quantize_bitwidth_config.hpp  quantize_lut_types.h  quantize_ops.cuh  quantize_ops_helper.h  quantize_ops_helper.hpp  quantize_param_types.h  quantized_unit_testing.cuh  quantized_unit_testing.h  tensor_utils.h
pytorch/: custom_gru.py  optimized_quantizable_gru.py  quant_gru.py  quick_start.py  run_test.sh  setup.py  sqrt_rep.py  test_custom_gru_quantization.py  test_gru_train.py  test_quant_gru.py
pytorch/config/: README.md  gru_quant_bitwidth_config.json
pytorch/example/: example_usage.py
pytorch/lib/: gru_interface_binding.cc  gru_interface_binding.cpp
pytouch/: QuantGRU.py  QuantizeGRU.py  custom_gru.py  setup.py  test_cuda_gru.py  test_custom_gru_quantization.py  test_gru_train.py  test_pytorch_gru.py
pytouch/lib/: GRUQuantWrapper.hpp  gru_interface_binding.cpp
quant-gru-cpu-only/: CMakeLists.txt  README.md
quant-gru-cpu-only/example/: main.cc
quant-gru-cpu-only/include/: gru_quant_cpu.h  quantize_bitwidth_config.h  quantize_lut_types.h  quantize_ops_helper.h  quantize_param_types.h
quant-gru-cpu-only/src/: gru_forward_cpu_quant.cc  quantize_lut.cc
script/: pack_release.sh  run_all_test.sh  run_test.sh  test_intermediate_ops_bitwidth.sh  test_sigmoid_bitwidth_configs.sh  test_weight_activation_bitwidth.sh
src/: calibration_gpu.cu  gru.cc  gru.cu  gru_backward_gpu.cu  gru_backward_gpu_quant.cu  gru_calibrateGruScales.cpp  gru_forward_cpu_quant.cc  gru_forward_gpu.cu  gru_forward_gpu_quant.cu  gru_forward_gpu_quant_fp.cu  gru_interface.cc  gru_interface.cpp  histogram_calibration_utils.cu  histogram_gpu.cu  parallel_algoithm.cu  quant_gru.cpp  quantize_ops.cu
test/: test_pot2_affine_regression.cu
